--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
       </div>
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="public/public/plant.jpeg" alt="Hindalco Branding" class="gallery-img">
-          <!-- <img src="public/public/plant.jpg" alt="Hindalco Branding" class="gallery-img"> -->
+          <img src="plant.jpeg" alt="Hindalco Branding" class="gallery-img">
+          <!-- <img src="plant.jpg" alt="Hindalco Branding" class="gallery-img"> -->
           <div class="gallery-overlay">
             <h3>Hindalco Industries</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <!-- <img src="public/public/plant.jpeg" alt="Hindalco Branding" class="gallery-img"> -->
-          <img src="public/public/plant.jpg" alt="Hindalco Branding" class="gallery-img">
+          <!-- <img src="plant.jpeg" alt="Hindalco Branding" class="gallery-img"> -->
+          <img src="plant.jpg" alt="Hindalco Branding" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hindalco Industries</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
@@ -101,147 +101,147 @@
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/1.png" alt="Hindalco Branding" class="gallery-img">
+          <img src="1.png" alt="Hindalco Branding" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hindalco Industries</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/cell-phone-tower.jpg" alt="Hindalco Branding" class="gallery-img">
+          <img src="cell-phone-tower.jpg" alt="Hindalco Branding" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hindalco Industries</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/mainplantdark.jpeg" alt="Hindalco Branding" class="gallery-img">
+          <img src="mainplantdark.jpeg" alt="Hindalco Branding" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hindalco Industries</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
          <div class="gallery-item">
-          <img src="public/public/colony.jpeg" alt="Renusagar colony" class="gallery-img">
+          <img src="colony.jpeg" alt="Renusagar colony" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Renusagar colony</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/market.png" alt="Renusagar_ market" class="gallery-img">
+          <img src="market.png" alt="Renusagar_ market" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Renusagar Birla market</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
         <div class="gallery-item">
-        <img src="public/public/hanumanMandir.png" alt="Hanuman temple" class="gallery-img">
+        <img src="hanumanMandir.png" alt="Hanuman temple" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hanuman Mandir</h3>
             <p>Leading aluminum manufacturer with state-of-the-art facilities and commitment to excellence.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/park5.jpg" alt="Natural beauty" class="gallery-img">
+          <img src="park5.jpg" alt="Natural beauty" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Natural beauty</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/park3.png" alt="Natural beauty" class="gallery-img">
+          <img src="park3.png" alt="Natural beauty" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Natural beauty</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/park4.png" alt="Natural beauty" class="gallery-img">
+          <img src="park4.png" alt="Natural beauty" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Natural beauty</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/park2.png" alt="Scenic Views" class="gallery-img">
+          <img src="park2.png" alt="Scenic Views" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Scenic Views</h3>
             <p>Breathtaking sunsets and cloud formations that make Renusagar truly special.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/Aditya-Birla-Group-logo-transform.webp" alt="Aditya Birla Group" class="gallery-img">
+          <img src="Aditya-Birla-Group-logo-transform.webp" alt="Aditya Birla Group" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Aditya Birla Group</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/road.jpg" alt="road" class="gallery-img">
+          <img src="road.jpg" alt="road" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hospital road</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/hospital.png" alt="Hospital" class="gallery-img">
+          <img src="hospital.png" alt="Hospital" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Hospital</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/abic.jpeg" alt="Aditya Birla Group" class="gallery-img">
+          <img src="abic.jpeg" alt="Aditya Birla Group" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Aditya Birla Schools</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/abps.jpg" alt="Aditya Birla Group" class="gallery-img">
+          <img src="abps.jpg" alt="Aditya Birla Group" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Aditya Birla Schools</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/school.png" alt="Aditya Birla Group" class="gallery-img">
+          <img src="school.png" alt="Aditya Birla Group" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Aditya Birla Schools</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/anparaview.jpg" alt="Anpara View" class="gallery-img">
+          <img src="anparaview.jpg" alt="Anpara View" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Aditya Birla Group</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/anparaview2.jpg" alt="Anpara View" class="gallery-img">
+          <img src="anparaview2.jpg" alt="Anpara View" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Anpara View</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
          <div class="gallery-item">
-          <img src="public/public/binaStadium.png" alt="Bina View" class="gallery-img">
+          <img src="binaStadium.png" alt="Bina View" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Bina View</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/jwala_temp.png" alt="jwalaMukhi_temple" class="gallery-img">
+          <img src="jwala_temp.png" alt="jwalaMukhi_temple" class="gallery-img">
           <div class="gallery-overlay">
             <h3>jwalaMukhi_temple</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="public/public/chilkaJheel.png" alt="Chilka Lake" class="gallery-img">
+          <img src="chilkaJheel.png" alt="Chilka Lake" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Chilka Lake</h3>
             <p>Part of the prestigious Aditya Birla Group, committed to engineering better futures.</p>
