--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
           </div>
         </div>
         <div class="gallery-item">
-          <img src="park5.jpg" alt="Natural beauty" class="gallery-img">
+          <img src="park5.jpg" alt="Maduvan park" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Natural beauty</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="park3.png" alt="Natural beauty" class="gallery-img">
+          <img src="park3.png" alt="Maduvan park" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Natural beauty</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="park4.png" alt="Natural beauty" class="gallery-img">
+          <img src="park4.png" alt="Maduvan park" class="gallery-img">
           <div class="gallery-overlay">
             <h3>Natural beauty</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
@@ -382,3 +382,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
