--- a/index.html
+++ b/index.html
@@ -145,21 +145,21 @@
         <div class="gallery-item">
           <img src="park5.jpg" alt="Maduvan park" class="gallery-img">
           <div class="gallery-overlay">
-            <h3>Natural beauty</h3>
+            <h3>Maduvan park</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="park3.png" alt="Maduvan park" class="gallery-img">
           <div class="gallery-overlay">
-            <h3>Natural beauty</h3>
+            <h3>Maduvan park</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
         <div class="gallery-item">
           <img src="park4.png" alt="Maduvan park" class="gallery-img">
           <div class="gallery-overlay">
-            <h3>Natural beauty</h3>
+            <h3>Maduvan park</h3>
             <p>Stunning natural beauty surrounding our industrial township, creating a perfect balance.</p>
           </div>
         </div>
@@ -382,4 +382,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
